# GraphicsLearning

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  Radium.sln
Radium/: Program.cs  README.md  Radium.csproj
Radium/Properties/: AssemblyInfo.cs
Radium/RayTracing/: BoundingBox.cs  Color.cs  Face.cs  Light.cs  Material.cs  Matrix.cs  MeshObject.cs  Point.cs  Scene.cs  Skybox.cs  Texture.cs  UtilFunc.cs  Vector.cs
Radium/Utils/: Progressbar.cs  TracingDebug.cs
cmake/: custom_import_stb.cmake  custom_import_yycc.cmake
io_scene_radium/: radium_export.py
note/: .gitignore  liang-barsky.tex  note.tex
plumbum/: CMakeLists.txt
radium.old/RayTracing/: Beam.cs  BoundingBox.cs  Camera.cs  Color.cs  Face.cs  Light.cs  Matrix.cs  MeshObject.cs  Scene.cs  Texture.cs  UtilFunc.cs
radium.old/Utils/: Bitmap.cs  FileHelper.cs
radium_scene_exporter/: __init__.py
shared/: CMakeLists.txt  YYCGImage.cpp  YYCGImage.hpp
